// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="contain-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        NT
        $4,700.00
      </span>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render expensesSummary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="contain-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        NT
        $350.00
      </span>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
